# projectz

./: .gitignore  LICENCE  go.mod  specs.md
client/: client.go
core/proto/: telemetry.proto
core/proto/telemetry/v1/: telemetry.proto
core/telemetry/v1/: telemetry.pb.go
deploy/calico/: bgp-peer.yaml  frr.conf
deploy/systemd/: install.sh  loadbalancer-sysctl.conf  loadbalancer.service
docs/: lb-next-steps.md
ingestion/: Dockerfile  ingestion.go
k8s/: ingestion-deployment.yaml  ingestion-service.yaml  keda-scaledobject.yaml  lb-control-service.yaml  lb-deployment.yaml  lb-service.yaml
loadbalancer/: CMakeLists.txt  Dockerfile  Makefile
loadbalancer/include/: BackendManager.hpp  ControlServer.hpp  HealthChecker.hpp  MetricsServer.hpp
loadbalancer/src/: main.cpp
pkg/client/: client.go
pkg/ingestion/: ingestion.go
scripts/: gen-proto.sh  generate_protos.sh  k8s.sh  load_test.sh  monitor.sh  profile.sh  setup_deps.sh  start-services.sh  tcp_sink.cpp  tcp_spammer  tcp_spammer.cpp  telemetry_mock_client.py  telemetry_mock_server.py  tune_kernel.sh
services/loadbalancer/: CMakeLists.txt  Makefile  idoms.md
services/loadbalancer/src/: DnsResolver.cppm  Epoll.cppm  FileDescriptor.cppm  IoUring.cppm  OperationContext.cppm  ProxyServer.cppm  ProxyWorker.cppm  ProxyWorker_new.cppm  Socket.cppm  main.cpp
services/loadbalancer/tests/: DnsResolverTest.cpp  FileDescriptorTest.cpp  ProxyServerTest.cpp  load_testing_guide.md
stress/: main.go
